feat: support dependency install requests